--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "node-fetch": "^2.7.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
