renamed, added images, retyped

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PAYSTACK_SECRET=sk_test_c78dfbd036dc46b38784d4e62a935c0e5a9690f7
 RESEND_API_KEY=re_PqsRph9y_CH2tgJAkonVsbWZk86nbssYc
 FROM_EMAIL=onboarding@resend.dev
 OWNER_EMAIL=kbatomate@gmail.com
-MONGO_URI=mongodb+srv://abuelosolos:iAmAbuelo999/pharahs?retryWrites=true&w=majority&appName=Pharah
+MONGO_URI=mongodb+srv://abuelosolos:iAmAbuelo999@pharah.wfofxig.mongodb.net/pharahs?retryWrites=true&w=majority&appName=Pharah
 ADMIN_PASSWORD=HeisAbuelo999
