--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/salon-website.html" },
-    { "source": "/(.*)", "destination": "/salon-website.html" }
+  "version": 2,
+  "builds": [
+    { "src": "index.html", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
