--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "*.html", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/admin.html", "dest": "/admin.html" },
-    { "src": "/admin", "dest": "/admin.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/admin", "destination": "/admin.html" },
+    { "source": "/((?!admin\\.html|index\\.html|images/.*).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
