--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "echo 'static only'",
-  "outputDirectory": ".",
   "cleanUrls": true,
-  "trailingSlash": false,
   "rewrites": [
-    { "source": "/admin", "destination": "/admin.html" },
-    { "source": "/", "destination": "/index.html" }
+    { "source": "/admin", "destination": "/admin.html" }
   ]
 }
